# VaultMind

./: .env.example  .gitignore  README.md  docker-compose.stacker.yml  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
app/connect-redirect/: page.tsx
app/login/: page.tsx
backend/: README.md  main.py  pyproject.toml
components/brand/: brand-mark.tsx  theme-favicon.tsx
components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx
components/vaultmind/: chat-input.tsx  chat-message.tsx  chat-panel.tsx  citation-drawer.tsx  confirm-dialog.tsx  connect-dialog.tsx  help-dialog.tsx  integrations-dialog.tsx  knowledge-graph.tsx  login-arrow.tsx  login-carousel.tsx  login-panel.tsx  mobile-login-flow.tsx  settings-dialog.tsx  sidebar.tsx  status-dialog.tsx
docs/: graph-schema.md
frontend/app/: layout.tsx
frontend/lib/: notion-blocks.ts  notion-client.ts  notion-token.ts  page-similarity.ts  similarity-sidecar.ts
lib/: answer-synth.ts  api-security.ts  graph-layout.ts  link-intent.ts  llm-client.ts  llm-key.ts  llm-settings.ts  notion-blocks.ts  notion-client.ts  notion-constants.ts  notion-retriever.ts  notion-token.ts  page-classifier.ts  page-similarity.ts  similarity-sidecar.ts  tfidf.ts  vaultmind-types.ts  workspace-data.ts
lib/orchestration/: fusion.ts  orchestrator.ts  planner.ts  types.ts
lib/stacker/: README.md  adapters.ts  (+12 more)
scripts/: eval-harness.mjs  stacker-worker.mjs
(+14 files in other folders)
