[project]
name = "backend"
version = "0.1.0"
description = "VaultMind similarity sidecar — chunked BGE embeddings + FAISS ANN + chunk voting"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.128.1",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "pydantic>=2.0.0",
]
